--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
-  "name": "cyh-shopping-web",
+  "name": "cyh-cli",
   "version": "0.1.0",
   "private": true,
+  "main": "index.tsx",
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/mathjs": "^9.4.2",
     "@types/node": "^16.11.57",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "core-js": "^3.25.0",
+    "customize-cra": "^1.0.0",
+    "mathjs": "^11.1.0",
+    "mobx": "^6.1.8",
+    "mobx-react": "^7.5.2",
+    "mobx-react-lite": "^3.2.0",
+    "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-cli": "^4.10.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "webpack-dev-server --config webpack.config.js --open",
+    "build": "webpack --config webpack.config.js --color --progress",
+    "test": "echo 'Error: no test specified' && exit 1",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +51,30 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "css-loader": "^6.7.1",
+    "cssnano": "^5.1.13",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "ignore-loader": "^0.1.2",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.1",
+    "react-router-dom": "^6.3.0",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.74.0",
+    "webpack-dev-server": "^4.10.1"
   }
 }
